--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "ignore-files",
     "displayName": "Ignore files",
     "description": "Syntax highlighting for 'ignore' files : gitignore, npmignore, dockerignore, coffeelintignore, ...",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "publisher": "ldez",
     "repository": {
       "type": "git",
@@ -26,7 +26,8 @@
                 ".atomignore",
                 ".vscodeignore",
                 ".eslintignore",
-                ".prettierignore"
+                ".prettierignore",
+                ".stylelintignore"
             ],
             "configuration": "./language-configuration.json"
         },{
