feat: add stylelintignore (#2)

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
                 ".atomignore",
                 ".vscodeignore",
                 ".eslintignore",
-                ".prettierignore"
+                ".prettierignore",
+                ".stylelintignore"
             ],
             "configuration": "./language-configuration.json"
         },{
